@@ -1,1 +1,1 @@
-1.8.20.0-rc2
+1.8.20.0
